# EZS_UE

0_Unterlagen/C-Kurzfassung/: Vorlage.aux  Vorlage.lof  Vorlage.out  Vorlage.tex  Vorlage.toc
1_HelloWorld_tricore/: CMakeLists.txt  config.t32  ecosenv.sh  hello.c  hello.c~  t32.cmm
1_HelloWorld_tricore/ecos/: ecos.ecc
1_HelloWorld_tricore/emu/: CMakeLists.txt  bochsrc-gdb.in  bochsrc.in  frun.sh.in  grub.cfg.in  pts.sh.in  qrun.sh.in
1_HelloWorld_tricore/libEZS/drivers/tc1796/: ezs_counter.cpp  ezs_dac.cpp
1_HelloWorld_tricore/libEZS/hal/drivers/: DAC.cpp  DAC.h
1_HelloWorld_tricore/libEZS/hal/include/: Config.h  DMA.h  I2CDevice.h  RS232Device.h  SPIBus.h
1_HelloWorld_tricore/libEZS/hal/tc1796/: AnalogDeviceImpl.cpp  AnalogDeviceImpl.h  HalStartup.cpp  RS232DeviceImpl.cpp  RS232DeviceImpl.h
1_HelloWorld_tricore/libEZS/hal/tc1796/adc/: ADC.h
1_HelloWorld_tricore/libEZS/hal/tc1796/dsp/: CMakeLists.txt  triconv.h  trilib.h
1_HelloWorld_tricore/libEZS/hal/tc1796/gpta/: DCM.h  FPC.cpp  GPTA.h  IOLS.h  IS.h  LTC.h  PDL.h
1_HelloWorld_tricore/libEZS/hal/tc1796/interfaces/: CMakeLists.txt  GPIO.cpp  RS232.h  SSC.h
1_HelloWorld_tricore/libEZS/hal/tc1796/libos.src/: cint.c  init_argv.c
1_HelloWorld_tricore/libEZS/hal/tc1796/system/: SystemFrequency.h  SystemTimer.cpp  SystemTimer.h
1_HelloWorld_tricore/libEZS/include/: ezs_counter.h  ezs_fb.h  ezs_io.h  ezs_rs232.h
2_Antwortzeit_tricore/: CMakeLists.txt  Doxyfile.in  app.c  breakpoints.cmm  config.t32  ecosenv.sh  windows.cmm
2_Antwortzeit_tricore/ecos/: ecos.ecc
2_Antwortzeit_tricore/libEZS/drivers/tc1796/: ezs_gpio.c  ezs_rs232.cpp
2_Antwortzeit_tricore/libEZS/hal/include/: AnalogDevice.h  DigitalDevice.h  HalStartup.h  OSAbstraction.h
2_Antwortzeit_tricore/libEZS/hal/tc1796/: CMakeLists.txt  DMAImpl.cpp  DMAImpl.h  DigitalDeviceImpl.cpp  DigitalDeviceImpl.h  I2CDeviceImpl.cpp  I2CDeviceImpl.h
2_Antwortzeit_tricore/libEZS/hal/tc1796/adc/: ADCChannel.h  CMakeLists.txt
2_Antwortzeit_tricore/libEZS/hal/tc1796/gpta/: CMakeLists.txt  DCM.cpp  FPC.h  GPTA.cpp  PDL.cpp
2_Antwortzeit_tricore/libEZS/hal/tc1796/interfaces/: GPIO.h
2_Antwortzeit_tricore/libEZS/hal/tc1796/libos.src/: wdtcon.c
2_Antwortzeit_tricore/libEZS/hal/tc1796/scu/: CMakeLists.txt  SCU.h
2_Antwortzeit_tricore/libEZS/hal/tc1796/system/: CMakeLists.txt  DMA.h  SystemFrequency.cpp
2_Antwortzeit_tricore/libEZS/include/: ezs_stopwatch.h
2_Antwortzeit_tricore/libEZS/src/: ezs_fb.c  ezs_gcd.c  ezs_interpolation.c  ezs_io.c  ezs_stopwatch.c
